added missing config settings

--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -4,6 +4,9 @@
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
     </feature>
+    <feature name="LocalNotification">
+        <param name="android-package" value="jp.wizcorp.phonegap.plugin.localNotification.LocalNotification" />
+    </feature>
     <name>Hello Cordova</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
